--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@100&display=swap" rel="stylesheet">
   <title>The Great Linkerator</title>
   <style>
     * {
@@ -14,7 +16,9 @@
     }
   </style>
 </head>
+
 <body>
   <div id="root"></div>
 </body>
+
 </html>
